[gd_scene load_steps=6 format=2]

[ext_resource path="res://Bit.gd" type="Script" id=1]
[ext_resource path="res://assets/bitinactive.png" type="Texture" id=2]
[ext_resource path="res://assets/RobotoMono-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 25, 25 )
scale = Vector2( 2.5, 200 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 25, 25 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="ControlDisplay" type="Label" parent="Sprite"]
visible = false
margin_left = -8.0
margin_top = 56.0
margin_right = 32.466
margin_bottom = 142.257
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
